# ash-rpc

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  SECURITY.md  test.json
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/instructions/: base.instructions.md
.github/workflows/: commitlint.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
contrib/: Cargo.toml  README.md
contrib/src/: healthcheck.rs  lib.rs  logging.rs  middleware.rs
contrib/src/observability/: macros.rs  mod.rs  prometheus.rs  tracing.rs
contrib/src/transports/: axum.rs  mod.rs  websocket.rs
core/: Cargo.toml  README.md
core/fuzz/: Cargo.toml  README.md
core/fuzz/fuzz_targets/: auth_connection_context.rs  batch_parse.rs  error_builder.rs  error_parse.rs  fuzz_request_builder.rs  fuzz_response_builder.rs  notification_builder.rs  notification_parse.rs  registry_method_lookup.rs  request_builder.rs  request_creation.rs  request_parse.rs  response_builder.rs  response_parse.rs  sanitization_case_insensitive.rs  sanitization_composite.rs  sanitization_simple_pattern.rs
core/src/: auth.rs  builders.rs  lib.rs  logger.rs  macros.rs  middleware.rs  registry.rs  sanitization.rs  shutdown.rs  stateful.rs  streaming.rs  traits.rs  transport.rs  types.rs  utils.rs
core/src/audit_logging/: README.md  backends.rs  mod.rs  processor.rs
core/src/transport/: security.rs  tcp.rs  tcp_stream.rs  tcp_tls.rs
examples/: Cargo.toml  OBSERVABLE_SETUP_MACRO.md  README.md  advanced_macros_demo.rs  audit_logging_example.rs  auth_example.rs  auth_with_transport.rs  axum_server.rs  axum_simple.rs  axum_stateful_server.rs  basic.rs  caching_demo.rs  calculator_engine.rs  dashmap_stateful_server.rs  database_service.rs  docs_demo.rs  error_sanitization_example.rs  graceful_shutdown_example.rs  healthcheck_contrib_example.rs  healthcheck_example.rs  macros_demo.rs  new_macros_demo.rs  observable_setup_macro.rs  openapi_demo.rs  optional_methods_demo.rs  params_validation_demo.rs  rate_limiting_example.rs  security_config_example.rs  stateful_websocket_macro.rs  streaming_shutdown_example.rs  tcp_server.rs  tcp_server_macro.rs  tcp_stateful_server.rs  tcp_stream_client.rs  tcp_stream_server.rs  tcp_stream_server_macro.rs  tcp_streaming_client.rs  tcp_streaming_example.rs  tls_streaming_client.rs  tls_streaming_example.rs  (+8 more)
examples/financial_service/: .gitignore  Cargo.toml  demo.sh
examples/financial_service/src/: main.rs
examples/observability_telemetry/: .dockerignore  Cargo.toml  Dockerfile  JAEGER.md  QUICKSTART.md  README.md  docker-compose.yml  prometheus.yml  test-requests.sh
examples/observability_telemetry/grafana/dashboards/: ash-rpc-dashboard.json
examples/observability_telemetry/grafana/provisioning/dashboards/: dashboard.yml
examples/observability_telemetry/grafana/provisioning/datasources/: datasource.yml
examples/observability_telemetry/src/: main.rs
examples/src/: lib.rs
examples/tls_example/: README.md  generate_certs.sh  server.rs
examples/tls_example/certs/: cert.pem  key.pem
examples/tower_examples/: README.md  http_simple.rs  tcp_simple.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: auth_connection_context.rs  batch_parse.rs  error_builder.rs  error_parse.rs  notification_builder.rs  notification_parse.rs  registry_method_lookup.rs  request_builder.rs  request_creation.rs  request_parse.rs  response_builder.rs  response_parse.rs  sanitization_case_insensitive.rs  sanitization_composite.rs  sanitization_simple_pattern.rs
src/: auth.rs  builders.rs  healthcheck.rs  lib.rs  logger.rs  macros.rs  middleware.rs  registry.rs  sanitization.rs  shutdown.rs  streaming.rs  traits.rs  transport.rs  types.rs
src/audit_logging/: README.md  integrity.rs  processor.rs
src/observability/: macros.rs  mod.rs  prometheus.rs  tracing.rs
src/transports/: axum.rs  mod.rs  tcp.rs  tcp_stream.rs  tcp_tls.rs
stateful/: Cargo.toml
stateful/src/: lib.rs
