[workspace]
members = ["core", "contrib"]
# Examples excluded (may use old API)
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
homepage = "https://github.com/gntem/ash-rpc"
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"] }
