[package]
name = "ash-rpc-cli"
version = "0.1.0"
edition = "2021"
description = "Code generation CLI tool for ash-rpc JSON-RPC implementations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-cli"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "cli", "codegen", "generator", "tool"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Your Name <your.email@example.com>"]
readme = "../README.md"

[[bin]]
name = "ash-rpc-gen"
path = "src/main.rs"

[dependencies]
ash-rpc-core = { version = "0.1.0", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
