[package]
name = "ash-rpc-cli"
version = "1.0.2"
edition = "2024"
description = "Code generation CLI tool for ash-rpc JSON-RPC implementations"
license = "MIT"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-cli"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "cli", "codegen", "generator", "tool"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "../README.md"

[[bin]]
name = "ash-rpc-gen"
path = "src/main.rs"

[dependencies]
ash-rpc-core = { version = "1.0.2", path = "../core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
