[package]
name = "ash-rpc-contrib"
version = "3.0.0"
edition = "2024"
description = "Contributed JSON-RPC methods and utilities for ash-rpc"
license = "Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
homepage = "https://github.com/gntem/ash-rpc"
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "README.md"

[features]
default = []
healthcheck = []
tower = ["dep:tower"]
axum = ["dep:axum", "tokio"]
websocket = ["tokio", "tokio-tungstenite", "futures-util"]

[dependencies]
ash-rpc-core = { version = "3.0.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"], optional = true }
tower = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"

[[example]]
name = "tower_http_simple"
path = "../examples/tower_examples/http_simple.rs"
required-features = ["tower"]

[[example]]
name = "tower_tcp_simple"
path = "../examples/tower_examples/tcp_simple.rs"
required-features = ["tower"]
