[package]
name = "ash-rpc-contrib"
version = "3.0.0"
edition = "2024"
description = "Contributed JSON-RPC methods and utilities for ash-rpc"
license = "Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
homepage = "https://github.com/gntem/ash-rpc"
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "README.md"

[features]
default = []
healthcheck = []
tower = ["dep:tower"]
axum = ["dep:axum", "tokio"]
logging = ["dep:tracing"]
prometheus = ["dep:prometheus"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]
observability = ["logging", "prometheus", "opentelemetry"]

[dependencies]
ash-rpc-core = { version = "3.0.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"], optional = true }
tower = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }

# Logging dependencies
tracing = { version = "0.1", optional = true }

# Metrics dependencies
prometheus = { version = "0.13", features = ["process"], optional = true }

# Tracing dependencies
opentelemetry = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", features = ["tonic", "metrics", "trace"], optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"

[[example]]
name = "tower_http_simple"
path = "../examples/tower_examples/http_simple.rs"
required-features = ["tower"]

[[example]]
name = "tower_tcp_simple"
path = "../examples/tower_examples/tcp_simple.rs"
required-features = ["tower"]

[[example]]
name = "observable_setup_macro"
path = "../examples/observable_setup_macro.rs"
required-features = ["axum", "logging", "prometheus"]

