[package]
name = "ash-rpc-core"
version = "2.0.0"
edition = "2024"
description = "A comprehensive JSON-RPC 2.0 implementation with multiple transport layers and advanced features"
license = "MIT"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-core"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "rpc", "json", "tcp", "tower"]
categories = ["network-programming", "web-programming", "asynchronous"]
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "../README.md"
exclude = ["examples/"]

[[bin]]
name = "ash-rpc-gen"
path = "src/bin/ash-rpc-gen.rs"
required-features = ["cli"]

[features]
default = []
tcp = []
tcp-stream = ["tokio"]
axum = ["dep:axum", "tokio"]
tower = ["dep:tower"]
websocket = ["tokio", "tokio-tungstenite", "futures-util"]
stateful = []
cli = ["dep:clap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
ash-rpc-contrib = { path = "../contrib", features = ["healthcheck"] }
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
dashmap = "6.1"

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "macros_demo"
path = "../examples/macros_demo.rs"

[[example]]
name = "axum_server"
path = "../examples/axum_server.rs"
required-features = ["axum"]

[[example]]
name = "axum_simple"
path = "../examples/axum_simple.rs"
required-features = ["axum"]

[[example]]
name = "tcp_server"
path = "../examples/tcp_server.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_server_macro"
path = "../examples/tcp_server_macro.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_stream_client"
path = "../examples/tcp_stream_client.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server"
path = "../examples/tcp_stream_server.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server_macro"
path = "../examples/tcp_stream_server_macro.rs"
required-features = ["tcp-stream"]

[[example]]
name = "optional_methods_demo"
path = "../examples/optional_methods_demo.rs"

[[example]]
name = "transport_macros_demo"
path = "../examples/transport_macros_demo.rs"

[[example]]
name = "axum_stateful_server"
path = "../examples/axum_stateful_server.rs"
required-features = ["axum", "stateful"]

[[example]]
name = "database_service"
path = "../examples/database_service.rs"
required-features = ["stateful"]

[[example]]
name = "tcp_stateful_server"
path = "../examples/tcp_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "tower_http_simple"
path = "../examples/tower_http_simple.rs"
required-features = ["tower"]

[[example]]
name = "tower_tcp_simple"
path = "../examples/tower_tcp_simple.rs"
required-features = ["tower", "tcp-stream"]

[[example]]
name = "calculator_engine"
path = "../examples/calculator_engine.rs"

[[example]]
name = "docs_demo"
path = "../examples/docs_demo.rs"

[[example]]
name = "caching_demo"
path = "../examples/caching_demo.rs"

[[example]]
name = "utils_demo"
path = "../examples/utils_demo.rs"

[[example]]
name = "healthcheck_example"
path = "../examples/healthcheck_example.rs"

[[example]]
name = "websocket_server"
path = "../examples/websocket_server.rs"
required-features = ["websocket"]

[[example]]
name = "websocket_client"
path = "../examples/websocket_client.rs"
required-features = ["websocket"]

[[example]]
name = "dashmap_stateful_server"
path = "../examples/dashmap_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "stateful_websocket_macro"
path = "../examples/stateful_websocket_macro.rs"
required-features = ["websocket", "stateful"]
