[package]
name = "ash-rpc-core"
version = "2.1.0"
edition = "2024"
description = "A comprehensive JSON-RPC 2.0 implementation with multiple transport layers and advanced features"
license = "Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-core"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "rpc", "json", "tcp", "tower"]
categories = ["network-programming", "web-programming", "asynchronous"]
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "../README.md"
exclude = ["examples/"]

[features]
default = []
tcp = ["tokio"]
tcp-stream = ["tokio"]
tcp-stream-tls = ["tokio", "tokio-rustls", "rustls-pemfile"]
tower = ["dep:tower"]
stateful = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
ash-rpc-contrib = { path = "../contrib", features = ["healthcheck"] }
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
dashmap = "6.1"

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "macros_demo"
path = "../examples/macros_demo.rs"

[[example]]
name = "axum_server"
path = "../examples/axum_server.rs"
required-features = ["axum"]

[[example]]
name = "axum_simple"
path = "../examples/axum_simple.rs"
required-features = ["axum"]

[[example]]
name = "tcp_server"
path = "../examples/tcp_server.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_server_macro"
path = "../examples/tcp_server_macro.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_stream_client"
path = "../examples/tcp_stream_client.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server"
path = "../examples/tcp_stream_server.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server_macro"
path = "../examples/tcp_stream_server_macro.rs"
required-features = ["tcp-stream"]

[[example]]
name = "optional_methods_demo"
path = "../examples/optional_methods_demo.rs"

[[example]]
name = "transport_macros_demo"
path = "../examples/transport_macros_demo.rs"

[[example]]
name = "axum_stateful_server"
path = "../examples/axum_stateful_server.rs"
required-features = ["axum", "stateful"]

[[example]]
name = "database_service"
path = "../examples/database_service.rs"
required-features = ["stateful"]

[[example]]
name = "tcp_stateful_server"
path = "../examples/tcp_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "tower_http_simple"
path = "../examples/tower_http_simple.rs"
required-features = ["tower"]

[[example]]
name = "tower_tcp_simple"
path = "../examples/tower_tcp_simple.rs"
required-features = ["tower", "tcp-stream"]

[[example]]
name = "calculator_engine"
path = "../examples/calculator_engine.rs"

[[example]]
name = "docs_demo"
path = "../examples/docs_demo.rs"

[[example]]
name = "caching_demo"
path = "../examples/caching_demo.rs"

[[example]]
name = "utils_demo"
path = "../examples/utils_demo.rs"

[[example]]
name = "healthcheck_example"
path = "../examples/healthcheck_example.rs"

[[example]]
name = "healthcheck_contrib_example"
path = "../examples/healthcheck_contrib_example.rs"

[[example]]
name = "new_macros_demo"
path = "../examples/new_macros_demo.rs"

[[example]]
name = "params_validation_demo"
path = "../examples/params_validation_demo.rs"

[[example]]
name = "advanced_macros_demo"
path = "../examples/advanced_macros_demo.rs"

[[example]]
name = "tls_server"
path = "../examples/tls_example/server.rs"
required-features = ["tcp-stream-tls"]

[[example]]
name = "websocket_server"
path = "../examples/websocket_server.rs"
required-features = ["websocket"]

[[example]]
name = "websocket_client"
path = "../examples/websocket_client.rs"
required-features = ["websocket"]

[[example]]
name = "dashmap_stateful_server"
path = "../examples/dashmap_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "stateful_websocket_macro"
path = "../examples/stateful_websocket_macro.rs"
required-features = ["websocket", "stateful"]
