[package]
name = "ash-rpc-core"
version = "3.2.2"
edition = "2024"
description = "A comprehensive JSON-RPC 2.0 implementation with multiple transport layers and advanced features"
license = "Apache-2.0"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-core"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "rpc", "json", "tcp", "async"]
categories = ["network-programming", "web-programming", "asynchronous"]
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "README.md"
exclude = ["examples/"]

[features]
default = []
tcp = ["tokio"]
tcp-stream = ["tokio"]
tcp-stream-tls = ["tokio", "tokio-rustls"]
stateful = []
streaming = ["tokio"]
shutdown = ["tokio"]

[dependencies]
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.47", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros", "time", "signal"], optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
ash-rpc-contrib = { path = "../contrib", features = ["healthcheck"] }
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
dashmap = "6.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4"
rand = "0.8"

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "macros_demo"
path = "../examples/macros_demo.rs"

[[example]]
name = "axum_server"
path = "../examples/axum_server.rs"
required-features = ["axum"]

[[example]]
name = "axum_simple"
path = "../examples/axum_simple.rs"
required-features = ["axum"]

[[example]]
name = "tcp_server"
path = "../examples/tcp_server.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_server_macro"
path = "../examples/tcp_server_macro.rs"
required-features = ["tcp"]

[[example]]
name = "tcp_stream_client"
path = "../examples/tcp_stream_client.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server"
path = "../examples/tcp_stream_server.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tcp_stream_server_macro"
path = "../examples/tcp_stream_server_macro.rs"
required-features = ["tcp-stream"]

[[example]]
name = "optional_methods_demo"
path = "../examples/optional_methods_demo.rs"

[[example]]
name = "transport_macros_demo"
path = "../examples/transport_macros_demo.rs"

[[example]]
name = "axum_stateful_server"
path = "../examples/axum_stateful_server.rs"
required-features = ["axum", "stateful"]

[[example]]
name = "database_service"
path = "../examples/database_service.rs"
required-features = ["stateful"]

[[example]]
name = "tcp_stateful_server"
path = "../examples/tcp_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "calculator_engine"
path = "../examples/calculator_engine.rs"

[[example]]

name = "healthcheck_example"
path = "../examples/healthcheck_example.rs"

[[example]]
name = "healthcheck_contrib_example"
path = "../examples/healthcheck_contrib_example.rs"

[[example]]
name = "new_macros_demo"
path = "../examples/new_macros_demo.rs"

[[example]]
name = "params_validation_demo"
path = "../examples/params_validation_demo.rs"

[[example]]
name = "advanced_macros_demo"
path = "../examples/advanced_macros_demo.rs"

[[example]]
name = "tls_server"
path = "../examples/tls_example/server.rs"
required-features = ["tcp-stream-tls"]



[[example]]
name = "dashmap_stateful_server"
path = "../examples/dashmap_stateful_server.rs"
required-features = ["tcp", "stateful"]

[[example]]
name = "tracing_example"
path = "../examples/tracing_example.rs"

[[example]]
name = "rate_limiting_example"
path = "../examples/rate_limiting_example.rs"
required-features = ["tcp"]

[[example]]
name = "error_sanitization_example"
path = "../examples/error_sanitization_example.rs"

[[example]]
name = "security_config_example"
path = "../examples/security_config_example.rs"
required-features = ["tcp"]

[[example]]
name = "auth_example"
path = "../examples/auth_example.rs"

[[example]]
name = "auth_with_transport"
path = "../examples/auth_with_transport.rs"

[[example]]
name = "tcp_streaming_example"
path = "../examples/tcp_streaming_example.rs"
required-features = ["tcp-stream", "streaming"]

[[example]]
name = "tcp_streaming_client"
path = "../examples/tcp_streaming_client.rs"
required-features = ["tcp-stream"]

[[example]]
name = "tls_streaming_example"
path = "../examples/tls_streaming_example.rs"
required-features = ["tcp-stream-tls", "streaming"]

[[example]]
name = "tls_streaming_client"
path = "../examples/tls_streaming_client.rs"
required-features = ["tcp-stream-tls"]

[[example]]
name = "graceful_shutdown_example"
path = "../examples/graceful_shutdown_example.rs"
required-features = ["tcp-stream", "shutdown"]

[[example]]
name = "streaming_shutdown_example"
path = "../examples/streaming_shutdown_example.rs"
required-features = ["tcp-stream", "streaming", "shutdown"]
