[package]
name = "ash-rpc-stateful"
version = "1.0.0"
edition = "2021"
description = "Stateful JSON-RPC handlers with shared context support for ash-rpc"
license = "MIT"
repository = "https://github.com/gntem/ash-rpc"
documentation = "https://docs.rs/ash-rpc-stateful"
homepage = "https://github.com/gntem/ash-rpc"
keywords = ["json-rpc", "rpc", "stateful", "context", "handlers"]
categories = ["network-programming", "web-programming"]
authors = ["Giorgos Ntemiris <ntemirisgiorgos3@gmail.com>"]
readme = "../README.md"
exclude = ["examples/"]

[features]
default = []
tcp = ["ash-rpc-core/tcp"]
tcp-stream = ["ash-rpc-core/tcp-stream"]
axum = ["ash-rpc-core/axum"]

[dependencies]
ash-rpc-core = { version = "1.0.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
