[package]
name = "observability-telemetry-example"
version = "0.1.0"
edition = "2021"
publish = false
# Make this a standalone package, not part of the workspace
[workspace]
[dependencies]
ash-rpc-core = { path = "../../core", features = ["axum"] }
ash-rpc-contrib = { path = "../../contrib", features = ["observability", "logging", "prometheus", "opentelemetry"] }
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0"
slog = "2.8"
slog-term = "2.9"
slog-async = "2.8"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["default"] }
prometheus = { version = "0.13", features = ["process"] }
